# agentgate

./: .gitignore  CLAUDE.md  LICENSE  README.md  agentgate.yaml.example  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  detectors.md  evaluation.md  issue-1-stdio-proxy-spec.md  issue-10-session-store-spec.md  issue-11-chain-detection-spec.md  issue-12-audit-writer-spec.md  issue-13-logs-cli-spec.md  issue-14-init-cli-spec.md  issue-15-acceptance-tests-spec.md  issue-16-eval-harness-spec.md  issue-18-spec.md  issue-2-json-rpc-parser-spec.md  issue-21-sql-injection-detector-spec.md  issue-22-path-traversal-detector-spec.md  issue-23-command-injection-detector-spec.md  issue-24-ssrf-detector-spec.md  issue-25-secrets-detector-spec.md  issue-26-spec.md  issue-3-policy-loader-spec.md  issue-4-rule-engine-spec.md  issue-5-end-to-end-wiring-spec.md  issue-6-cli-start-spec.md  issue-7-integration-tests-spec.md  issue-8-param-rule-spec.md  mvp-spec.md  policy-language.md
eval/: README.md  harness.py  report.py
examples/: README.md  demo_agent.py  email_mcp_server.py
examples/policies/: demo.yaml  minimal.yaml  permissive.yaml  restrictive.yaml
src/agentgate/: __init__.py  audit.py  (+7 more)
tests/: conftest.py  test_acceptance.py  test_audit.py  test_chain_integration.py  test_cli.py  test_cli_init.py  test_cli_logs.py  test_engine.py  test_eval_harness.py  test_integration.py  test_models.py  test_param_rule.py  test_parser.py  test_policy.py  test_proxy.py  test_proxy_policy.py  test_session.py
(+18 files in other folders)
