[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentgate"
version = "0.1.0"
description = "Tool-call policy engine and runtime proxy for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "AgentGate Contributors" }]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
agentgate = "agentgate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100
